@@ -574,6 +574,15 @@ INI file.  It would also give access to the GOTO command, but only insofar as it
 to areas where the player is listed as Staff.  Lastly, it gives global access to the Snoop \
 command.
 
+SHAME=ARCHON_SHAME
+ARCHON_SHAME=<ABILITY>\
+Usage    : SHAME [PLAYER NAME] (RL TIME)\n\r\
+Example  : shame gunther\n\r\
+Example  : shame gunther 3 hours\n\r\
+From anywhere on the map, the player with this skill can shame the target mob/player \
+making them unable to effectively interact with shopkeepers or to be spoken to or \
+about.
+
 TRUCE=\
 Ability    : Truce\n\r\
 Parameters : Empty, or Name of other party\n\r\
