@@ -142,6 +142,16 @@ Description: \n\r\
 This mob property makes them unable to recall or magically leave their present location. \
 It also prevents fleeing from combat.
 
+SHAMING=\
+Property   : Shaming\n\r\
+Targets    : Mobs\n\r\
+Parameters : GLOBAL/[AREA NAME]\n\r\
+Example    : \n\r\
+Description: \n\r\
+This mob property makes them unable to effectively interact with anyone in the specified area \
+and their home area, if they are different.  Attempts to interact are changed into emotes of \
+shaming towards the shamed one.
+
 PROP_ABILITYIMMUNITY=\
 Property   : Prop_AbilityImmunity\n\r\
 Targets    : Anything\n\r\
