@@ -1823,6 +1823,10 @@ PRISONER`SGEAS=PRISONER
 PRISONER=One who is under the prisoner`s geas is unable to cast spells of \
 recall or teleportation, and can not flee from combat. 
 
+SHAMING=PUBLIC_SHAMING
+PUBLIC_SHAMING=One who is being publicly shamed, and cannot be interacted with, or \
+even directly spoken to or about.
+
 INFORMATION=You need to be more specific.  Try HELP or HELP HELPLIST.
 
 DISPEL=See HELP on REVOKE or SPELL DISPEL MAGIC
